# calendar-aggregator

./: .dockerignore  .env.dev  .gitignore  Dockerfile  README.md  docker-compose.yml  launch.sh  todo.txt
backend/: Cargo.toml  pyproject.toml  sqlx-data.json
backend/calendar_aggregator/: api_router.py  app.py  main.py  models.py  router.py  settings.py
backend/calendar_aggregator/event_extraction/: date_extraction.py  interfaces.py  rule_based_extractor.py
backend/calendar_aggregator/event_fetching/: cached_event_fetcher.py  event_fetcher.py  interfaces.py
backend/calendar_aggregator/event_fetching/event_extraction/: date_extraction.py  interfaces.py  rule_based_extractor.py
backend/calendar_aggregator/html_fetching/: html_fetcher.py  interfaces.py
backend/migrations/: 20221203095512_initial.sql
backend/src/: cache.rs  lib.rs  main.rs  models.rs  repository.rs
backend/src/extractors/: date_extraction.rs  largest_element_with_single_date.rs  mod.rs
backend/tests/: test_api.py  test_cached_event_fetcher.py  test_rule_based_extractor.py  tests.rs
backend/tests/test_html/: .gitignore  fake-website.html  koelner-philharmonie.html
backend/tests/test_responses/: radio-essen.html  theater-essen.html  tonhalle.html
calendar-extractors/default-extractor/: Cargo.toml
calendar-extractors/default-extractor/src/: lib.rs  main.rs
calendar-extractors/default-extractor/src/extractors/: date_extraction.rs  largest_element_with_single_date.rs  mod.rs  smallest_div_with_date.rs
calendar-extractors/default-extractor/tests/: tests.rs
calendar-extractors/default-extractor/tests/test_responses/: domicil.html  elbphilharmonie.html  google.html  gruga.html  ruhr-museum.html  theater-hamburg.html  tonhalle.html
calendar-extractors/python-extractor/: pyproject.toml
calendar-extractors/python-extractor/src/: extraction.py  test_extraction.py
deploy/: Dockerfile.backend
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: Api.tsx  App.css  App.test.tsx  App.tsx  Common.tsx  Debug.tsx  EventTable.css  EventTable.tsx  TopicEvents.tsx  index.tsx
