[package]
name = "default-extractor"
version = "0.1.0"
edition = "2021"
[[bin]]
name = "calendar-aggregator"
path = "src/main.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2.2.2"                 # URL library for Rust, based on the WHATWG URL Standard
reqwest = {version = "0.11"} # higher level HTTP client library
scraper = "0.13.0"              # HTML parsing and querying with CSS selectors
chrono = {version = "0.4.21", features = ["serde"]}                   # Date and time library for Rust
regex = "1.6.0" 
rocket = {version = "0.5.0-rc.2", features = ["json"]}                  # Web framework for nightly with a focus on ease-of-use, expressibility, and speed. 
serde = { version = "1.0", features = ["derive"] }
redis = "0.22.1"
sqlx = { version = "0.6.2", features = ["postgres", "offline", "runtime-tokio-native-tls"] }
