[tool.poetry]
name = "calendar-aggregator"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.94.0"
uvicorn = {extras = ["standard"], version = "^0.21.0"}
bs4 = "^0.0.1"
httpx = "^0.23.3"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
mypy = "^1.1.1"
pytest = "^7.2.2"
types-beautifulsoup4 = "^4.11.6.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
