[package]
name = "default-extractor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2.2.2"                 # URL library for Rust, based on the WHATWG URL Standard
reqwest = {version = "0.11", features = ["blocking"]} # higher level HTTP client library
scraper = "0.13.0"              # HTML parsing and querying with CSS selectors
chrono = "0.4.21"                   # Date and time library for Rust
regex = "1.6.0" 
