[tool.poetry]
name = "python-extractor"
version = "0.1.0"
description = ""
authors = ["Simon Blessenohl <simon1000010@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
spacy = "^3.4.1"
beautifulsoup4 = "^4.11.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[tool.poetry.dependencies.en_core_web_trf]
url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_trf-3.4.0/en_core_web_trf-3.4.0.tar.gz"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
